@@ -1,5 +1,5 @@
 /* xgetcwd.c -- return current directory with unlimited length
-   Copyright (C) 1992, 1996, 2000 Free Software Foundation, Inc.
+   Copyright (C) 1992, 1996, 2000, 2003 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -29,6 +29,10 @@ extern int errno;
 #endif
 
 #include <sys/types.h>
+#if HAVE_UNISTD_H
+# include <unistd.h>
+#endif
+
 #include "pathmax.h"
 
 #if HAVE_GETCWD
